# pyskel

./: Dockerfile  README.md  pyproject.toml  tox.ini
pyskel/: __main__.py
python-skeleton/: main.py
python-skeleton/bar/: bar.py
python-skeleton/foo/: foo.py
python-skeleton/squarer/: squarer.py
python-skeleton/two/: example.py
python_skeleton/: __init__.py  __main__.py  main.py
python_skeleton/api/: request.py
src/pyskel/: __main__.py
src/pyskel/api/: request.py
src/pyskel/foo/: foo.py
tests/: test_api.py  test_math.py  test_squarer.py
