[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "python_skeleton"
dependencies = []

requires-python = ">= 3.12"

authors = [
  {name = "John Doe", email = "john.doe@example.com"},
]

description = "Quickstarter for modern python projects."

license = {file = "LICENSE"}

python-skeleton = "python_skeleton" # run python-skeleton as command after installing
