[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pyskel"
dependencies = [
  'requests',
]

requires-python = ">= 3.12"

authors = [
  {name = "John Doe", email = "john.doe@example.com"},
]

description = "Python skeleton quickstarter for modern python projects."

license = {file = "LICENSE"}
